[package]
name = "atomic-byte-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-waker = "1.1.2"
crossbeam-channel = "0.5.11"
crossbeam-utils = "0.8.19"
parking_lot = "0.12.1"
tokio = "1.36.0"
