[package]
name = "atomic-byte-channel"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["futures-core/std"]

[dependencies]
atomic-waker = "1.1.2"
crossbeam-channel = "0.5.11"
crossbeam-utils = "0.8.19"
futures-core = "0.3.30"
parking_lot = "0.12.1"
rand = "0.8.5"
tokio = "1.36.0"

[target.'cfg(loom)'.dependencies]
loom = "0.7.1"
